# lumio

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.celery  Dockerfile.ffmpeg  README.md  docker-compose.yml  pyproject.toml  requirements.txt  specs.md
.github/workflows/: ci-cd.yml
apps/analytics/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_caching.py  test_tasks.py  tests.py  urls.py  views.py
apps/assessments/: adaptive.py  admin.py  apps.py  models.py  serializers.py  test_adaptive.py  tests.py  urls.py  views.py
apps/certificates/: admin.py  email_service.py  models.py  pdf_service.py  serializers.py  tasks.py  test_certificate_pipeline.py  test_tasks.py  tests.py  urls.py  views.py
apps/cohorts/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_drip_unlock.py  test_tasks.py  tests.py  unlock.py  urls.py  views.py
apps/core/: email.py
apps/courses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/enrollments/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/media/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_video_pipeline.py  tests.py  urls.py  video_service.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  tasks.py  test_email_drip.py  test_tasks.py  tests.py  urls.py  views.py
apps/payments/: admin.py  models.py  serializers.py  stripe_service.py  test_stripe_pipeline.py  tests.py  urls.py  views.py
apps/search/: __init__.py  admin.py  apps.py  cache.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/: admin.py  email_service.py  models.py  permissions.py  serializers.py  tests.py  tests_email_auth.py  tests_security.py  throttles.py  token_service.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  metrics.py  middleware.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  staging.py  test.py
docs/: adaptive-quiz.md  architecture.md  implementation-roadmap.md  payments.md  video-pipeline.md
scripts/: start.sh  stop.sh
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/environments/: production.tfvars
tests/integration/: README.md  conftest.py  test_analytics.py  test_assessments.py  test_auth.py  test_certificates.py  (+9 more)
(+18 files in other folders)
